<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:title="@string/register_product"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_seller"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/margin_small"/>

            <Spinner
                android:id="@+id/sellerSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_large"
                android:padding="@dimen/margin_small"
                android:background="@drawable/rounded_edittext_background"/>

            <EditText
                android:id="@+id/orderIdInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_id"
                android:inputType="text"
                android:layout_marginBottom="@dimen/margin_large"
                android:padding="@dimen/margin_small"
                android:background="@drawable/rounded_edittext_background"/>

            <EditText
                android:id="@+id/dateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_purchase"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:layout_marginBottom="@dimen/margin_large"
                android:padding="@dimen/margin_small"
                android:background="@drawable/rounded_edittext_background"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_product"
                android:background="@drawable/rounded_button"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:padding="@dimen/margin_small"/>

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>